2006-08-02  Guillaume Smet <guillaume-pg@smet.org>

	* [vacuum] added the duration information
	* [vacuum] added a detailed report

2006-08-02  Open Wide <guillaume.smet@openwide.fr>

	* [vacuum] fixed a bug in database/schema filter

2006-07-26  Guillaume Smet <guillaume-pg@smet.org>

	* added a few hints if pgFouine does not find any valid
	PostgreSQL log line

2006-07-25  Guillaume Smet <guillaume-pg@smet.org>

	* changed the default order for vacuumed tables report
	* added the ability to filter vacuum log analysis on
	database and schema

2006-07-24  Guillaume Smet <guillaume-pg@smet.org>

	* added a queries history report

2006-07-23  Guillaume Smet <guillaume-pg@smet.org>

	* added the collect of index cleanup information
	* added more information in vacuum overall statistics

2006-07-19  Guillaume Smet <guillaume-pg@smet.org>

	* more work on vacuum verbose output analysis

2006-07-19  Open Wide <guillaume.smet@openwide.fr>

	* began the work on vacuum verbose output analysis

2006-07-13 Guillaume Smet <guillaume-pg@smet.org>

	* fixed a problem with older versions of PHP

2006-06-11  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a problem with NOTICE/STATEMENT couple on DDL
	* improved the -report option analysis
	* NOTICEs for a query are now displayed
	* improved normalized queries formatting

2006-05-27  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a bug when there is no query in the log file

2006-05-21  Guillaume Smet <guillaume-pg@smet.org>

	* released 0.6

2006-05-20  Guillaume Smet <guillaume-pg@smet.org>

	* normalized error code cleanup

2006-05-19  Guillaume Smet <guillaume-pg@smet.org>

	* added a test to check the freetype support
	* reported changes made on PHP4 version of Artichow to the PHP5 version
	* added -memorylimit option

2006-04-21  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a stupid notice in tooltips thanks to Larry Rosenman
	* added an option to set syslog ident (postgres by default) following