@@ -1,3 +1,10 @@
+2006-08-03  Guillaume Smet <guillaume-pg@smet.org>
+
+	* [vacuum] improved the layout
+	* [vacuum] fixed the default sort order to work also
+	for simple VACUUM
+	* [vacuum] added the CPU usage
+
 2006-08-02  Guillaume Smet <guillaume-pg@smet.org>
 
 	* [vacuum] added the duration information
